// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GildedRose constructor should instantiate with default items if none provided 1`] = `[]`;

exports[`GildedRose constructor should instantiate with provided items 1`] = `[]`;

exports[`GildedRose should decrease quality and sellIn for a normal item 1`] = `
[
  "Before update:",
  "Default item before:",
  "Default item after:",
  "After update:",
]
`;

exports[`GildedRose should degrade twice as fast for normal items once sell date has passed 1`] = `
[
  "Before update:",
  "Default item before:",
  "Default item after:",
  "After update:",
]
`;

exports[`GildedRose should drop quality to 0 for Backstage passes after concert 1`] = `
[
  "Before update:",
  "Backstage Pass before:",
  "Backstage Pass after:",
  "After update:",
]
`;

exports[`GildedRose should handle Sulfuras correctly (no change) 1`] = `
[
  "Before update:",
  "After update:",
]
`;

exports[`GildedRose should increase quality by 2 for Backstage passes with 10 days or less 1`] = `
[
  "Before update:",
  "Backstage Pass before:",
  "Backstage Pass after:",
  "After update:",
]
`;

exports[`GildedRose should increase quality by 3 for Backstage passes with 5 days or less 1`] = `
[
  "Before update:",
  "Backstage Pass before:",
  "Backstage Pass after:",
  "After update:",
]
`;

exports[`GildedRose should increase quality for Aged Brie 1`] = `
[
  "Before update:",
  "Aged Brie before:",
  "Aged Brie after:",
  "After update:",
]
`;

exports[`GildedRose should increase quality for Backstage passes as concert approaches 1`] = `
[
  "Before update:",
  "Backstage Pass before:",
  "Backstage Pass after:",
  "After update:",
]
`;

exports[`GildedRose should increase quality of Aged Brie by 1 when sellIn is negative 1`] = `
[
  "Before update:",
  "Aged Brie before:",
  "Aged Brie after:",
  "After update:",
]
`;

exports[`GildedRose should not decrease quality below 0 1`] = `
[
  "Before update:",
  "Default item before:",
  "Default item after:",
  "After update:",
]
`;

exports[`GildedRose should not increase quality above 50 for Aged Brie 1`] = `
[
  "Before update:",
  "Aged Brie before:",
  "Aged Brie after:",
  "After update:",
]
`;

exports[`should degrade Quality of "normal" item twice as fast after sell by date 1`] = `
[
  "Before update:",
  "Default item before:",
  "Default item after:",
  "After update:",
]
`;

exports[`should increase Quality for "Aged Brie" as it gets older 1`] = `
[
  "Before update:",
  "Aged Brie before:",
  "Aged Brie after:",
  "After update:",
]
`;

exports[`should increase Quality for "Backstage passes" according to SellIn value 1`] = `
[
  "Before update:",
  "Backstage Pass before:",
  "Backstage Pass after:",
  "After update:",
  "Before update:",
  "Backstage Pass before:",
  "Backstage Pass after:",
  "After update:",
  "Before update:",
  "Backstage Pass before:",
  "Backstage Pass after:",
  "After update:",
]
`;

exports[`should increase Quality for "Backstage passes" as SellIn value approaches 1`] = `
[
  "Before update:",
  "Backstage Pass before:",
  "Backstage Pass after:",
  "After update:",
]
`;

exports[`should never allow Quality to be more than 50 1`] = `
[
  "Before update:",
  "Aged Brie before:",
  "Aged Brie after:",
  "After update:",
]
`;

exports[`should never allow negative Quality 1`] = `
[
  "Before update:",
  "Default item before:",
  "Default item after:",
  "After update:",
]
`;

exports[`should never change SellIn or Quality for "Sulfuras" 1`] = `
[
  "Before update:",
  "After update:",
]
`;
